# ad_fleet_mgmt

./: .gitignore  .gitmodules  README.md
center/config/: local.json  static_docker_run_args.json.template
center/docker_/: build_run.py  entrypoint.sh
center/utils/: getters.py
center/ws/: vehicle_box_urdf.xml
center/ws/ros2_src/cc_py/: package.xml  setup.cfg  setup.py
center/ws/ros2_src/cc_py/cc_py/: assisted_vehicle_relay_manager.py  clear_a_star_visualization.py  clear_all_markers.py  lanelet_publisher.py  lanelet_saver.py  process_map.py  publish_map.py  reduce_map.py  tf_map_to_cart_publisher.py  tf_map_to_cart_saver.py
center/ws/ros2_src/cc_py/launch/: foxglove_bridge_launch.xml
center/ws/run_yamls/: demo.yaml
compositions/fleet_mgmt_demo/a_control_center/: composition.yaml  foxglove_layout.json  foxglove_ui_fleet_overview.sh  relink.sh  restart_com.sh  restart_control_center.sh  stop_composition.sh  stop_control_center.sh
compositions/fleet_mgmt_demo/b_simulated_vehicle_ella/: composition.yaml  foxglove_ui_vehicle_map.sh  restart_com.sh  restart_simulated_vehicle.sh  stop_com.sh  stop_composition.sh  stop_simulated_vehicle.sh
compositions/shared/: attach_to_composition.sh  restart_com_for_session.py  stop_com.sh  stop_control_center.sh
re_init/: create_ros_communication_devcontainer_local_json.py  re_init.py
session/: local.json.template
session/shared/: common_plugin.yaml  data_dict_demo.json
simulated_fleet/config/: local.json
simulated_fleet/docker_/: Dockerfile  build.py  build_run_catmux.py
simulated_fleet/utils/: getters.py
(+25 files in other folders)
