<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cc_py</name>
  <version>0.0.0</version>
  <description>
    A ROS2 package for managing assisted vehicle operations, including visualization, marker management, and map processing functionalities.
  </description>
  <maintainer email="gontscharow@fzi.de">Martin Gontscharow</maintainer>
  <license>BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
